--- a/config/config.json
+++ b/config/config.json
@@ -11,13 +11,13 @@
     "type": "elasticsearch"
   },
   "es_config": {
-    "es_host": "localhost",
+    "es_host": "139.59.247.254",
     "es_port": 9200,
     "es_user": "elastic",
-    "es_password": "changeme",
+    "es_password": "BMK1EX84Pr-EaQwbXyO5",
     "ebpf_index": "ebpf-events",
     "pcap_index": "pcap-flows",
-    "batch_size": 500,
+    "batch_size": 1000,
     "secure": true
   },
   "pcap_config": {
