--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,7 @@
     "es_host": "139.59.247.254",
     "es_port": 9200,
     "es_user": "elastic",
-    "es_password": "BMK1EX84Pr-EaQwbXyO5",
+    "es_password": "changeme",
     "ebpf_index": "ebpf-events",
     "pcap_index": "pcap-flows",
     "batch_size": 1000,
