--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
     "storage_type": "elasticsearch"
   },
   "es_config": {
-    "es_host": "139.59.247.254",
+    "es_host": "localhost",
     "es_port": 9200,
     "es_user": "elastic",
     "es_password": "changeme",
